tests/extensions/structs/valid/fieldAccess.wacc
# Output:
# 1
# 2

begin
    struct sa is
        int a
        int b
    end
    sa obj = sa{1, 2};
    println obj.a;
    println obj.b
end
