tests/extensions/structs/semanticErr/badStructInitialization.wacc
begin
    struct sa is
        int s   # 4
        int b  # 1
    end

    sa a = sa
end


